changed height unit to fix issue on Safari on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,7 @@ header a{
     background-position: 100% 0%;
     background-size: 100%;
     border: 0;
-    height: 3rem;
+    height: 9%;
     aspect-ratio: 1;
     top: 1%;
     right: 2%;
